# liquidupstart

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  NOTICE  README.md  RESEARCH.md  build.bat  build.sh  cleanup.bat  cleanup.sh  compose.yml  compose.yml.bak  down.bat  down.sh  generate_api_key.sh  run.bat  run.sh  start.bat  start.sh
config/privacy-gateway/app/: .gitignore  README.md  pyproject.toml
config/privacy-gateway/app/corpus/de/: basic.labels.json  basic.request.json
config/privacy-gateway/app/corpus/en/: basic.labels.json  basic.request.json  date_id.labels.json  date_id.request.json  quasi.labels.json  quasi.request.json  secrets.labels.json  secrets.request.json  tool_use.labels.json  tool_use.request.json
config/privacy-gateway/app/corpus/es/: basic.labels.json  basic.request.json
config/privacy-gateway/app/corpus/fr/: basic.labels.json  (+1 more)
config/privacy-gateway/app/privacy_gateway/: config.py  logging_config.py  main.py  serve.py
config/privacy-gateway/app/tests/: conftest.py  test_adapter.py  test_config.py  test_corpus.py  test_detection.py  test_detection_units.py  test_exchange_errors.py  test_health.py  test_language.py  test_llm_client.py  test_llm_integration.py  test_logging.py  test_m4_gate.py  test_m4_second_pass.py  test_m4b_loop.py  test_m4b_rewriter.py  test_m6_codex.py  test_m6_copilot.py  test_m6_grok.py  test_m6_infra.py  test_m7_audit.py  test_m7_backstop.py  test_m7_persist.py  test_modeb_flags.py  test_openai_adapter.py  test_openai_streaming.py  test_responses_adapter.py  test_responses_streaming.py  test_restore.py  test_round_trip.py  test_route_errors.py  test_scoring.py  test_second_pass.py  test_streaming.py  test_streaming_deanon.py  test_streaming_route.py  test_vault.py
(+191 files in other folders)
